<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context="com.example.android.studybreak.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/snack_baked" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bangers_regular"
                android:gravity="end"
                android:text="@string/app_name"
                android:textAlignment="viewEnd"
                android:layout_marginBottom="@dimen/title_margin_bottom"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/title_text_size" />
        </RelativeLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size" />


        <EditText
            android:id="@+id/name_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:hint="@string/hint_text"
            android:inputType="textCapWords"
            android:padding="@dimen/padding"
            android:shadowColor="@color/secondaryDarkColor"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question1a"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question1a" />

                <RadioButton
                    android:id="@+id/question1b"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question1b" />
            </LinearLayout>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/question2a"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question2a" />

                <CheckBox
                    android:id="@+id/question2b"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question2b" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/question2c"
                    style="@style/questionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2c" />
            </LinearLayout>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question3a"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question3a" />

                <RadioButton
                    android:id="@+id/question3b"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question3b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question3c"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question3c" />
            </LinearLayout>


        </RadioGroup>

        <LinearLayout
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/question4a"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question4a" />

                <CheckBox
                    android:id="@+id/question4b"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question4b" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/question4c"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question4c" />
            </LinearLayout>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question5a"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question5a" />

                <RadioButton
                    android:id="@+id/question5b"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question5b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question5c"
                    style="@style/questionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question5c" />
            </LinearLayout>


        </RadioGroup>

        <RadioGroup
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:visibility="gone">



                <RadioButton
                    android:id="@+id/question6a"
                    style="@style/questionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6a" />

                <RadioButton
                    android:id="@+id/question6b"
                    style="@style/questionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6b" />


        </RadioGroup>

        <LinearLayout
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:visibility="gone">

            <EditText
                android:id="@+id/locationEntry"
                style="@style/questionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:inputType="textCapWords" />
        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:text="@string/button0"
            android:textColor="@color/primaryTextColor" />


    </LinearLayout>
</ScrollView>
